<resources>
    <string name="app_name">Lists</string>
    <string name="login_title_message">ToDo Lists for Family</string>
    <string name="login_message">Continue Panna login pannunga da</string>
    <string name="register_message">Please enter below details for Registeration</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="conf_password">Confirm Password</string>
    <string name="login">LOGIN</string>
    <string name="empty"></string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="email">E-mail</string>
    <string name="mobile">Mobile No.</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="seperator">/</string>
    <string name="register_button">Register</string>
    <string name="mobileno">Mobile No : </string>
    <string name="emailid">E-mail : </string>
    <string name="optiona">Manage Options</string>
    <string name="mytodo">My To Do\'s</string>
    <string name='searchfield'>Enter any user related data</string>string>
    <string name='searchuser'>Search User</string>string>
    <string name='selecteduserlist'>List of Activities for Selected User</string>string>
    <string name='addtolist'>Add</string>string>
    <string name='clicktoedit'>Click to Edit</string>string>
    <string name='requests'>Requests</string>string>
    <string name='requestheader'>Below Users have Requested Access \n (Click on user name for Actions)</string>string>
</resources>
